http/compile_errors_v5.txt
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ...cManifest, StaticNode, StaticStat...
   |               ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-http v0.12.0 (F:\project\ranvier\ranvier-workspace\ranvier\http)
error[E0425]: cannot find value `resources` in this scope
    --> http\src\ingress.rs:1215:29
     |
1215 |             let resources = resources.clone();
     |                             ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `request` in this scope
    --> http\src\ingress.rs:2279:27
     |
2279 |     match service.oneshot(request).await {
     |                           ^^^^^^^ not found in this scope

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:2427:40
     |
2427 | impl<R> Service<Request<Incoming>> for RawIngressService<R>
     |                                        ^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1933:52
     |
1933 |     pub fn into_raw_service(self, resources: R) -> RawIngressService<R> {
     |                                                    ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1941:9
     |
1941 |         RawIngressService {
     |         ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:11:35
   |
11 | use crate::ingress::{HttpIngress, RawIngressService};
   |                                   ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:43:14
   |
43 |     service: RawIngressService<R>,
   |              ^^^^^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:1942:13
     |
1942 |             routes,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:1943:13
     |
1943 |             fallback,
     |             ^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:1944:13
     |
1944 |             layers,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:1945:13
     |
1945 |             health,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:1946:13
     |
1946 |             static_assets,
     |             ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:1947:13
     |
1947 |             resources,
     |             ^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:2443:22
     |
2443 |         let routes = self.routes.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:2444:24
     |
2444 |         let fallback = self.fallback.clone();
     |                        ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:2445:22
     |
2445 |         let layers = self.layers.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:2446:22
     |
2446 |         let health = self.health.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:2447:29
     |
2447 |         let static_assets = self.static_assets.clone();
     |                             ^^^^^^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:2448:25
     |
2448 |         let resources = self.resources.clone();
     |                         ^^^^^^^^^^^^^^

error[E0277]: `S` cannot be shared between threads safely
   --> http\src\sse.rs:126:59
    |
126 |     let boxed_body = BodyExt::map_err(body, |e| e.into()).boxed();
    |                                                           ^^^^^ `S` cannot be shared between threads safely
    |
note: required because it appears within the type `SseBody<S>`
   --> http\src\sse.rs:75:12
    |
 75 | pub struct SseBody<S> {
    |            ^^^^^^^
note: required because it appears within the type `http_body_util::combinators::MapErr<SseBody<S>, {closure@http\src\sse.rs:126:45: 126:48}>`
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\http-body-util-0.1.3\src\combinators\map_err.rs:15:16
    |
 15 |     pub struct MapErr<B, F> {
    |                ^^^^^^
note: required by a bound in `http_body_util::BodyExt::boxed`
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\http-body-util-0.1.3\src\lib.rs:69:30
    |
 67 |     fn boxed(self) -> BoxBody<Self::Data, Self::Error>
    |        ----- required by a bound in this associated function
 68 |     where
 69 |         Self: Sized + Send + Sync + 'static,
    |                              ^^^^ required by this bound in `BodyExt::boxed`
help: consider further restricting type parameter `S` with trait `Sync`
    |
122 |     S: Stream<Item = Result<SseEvent, E>> + Send + Unpin + 'static + std::marker::Sync,
    |                                                                    +++++++++++++++++++

error[E0308]: mismatched types
   --> http\src\sse.rs:128:5
    |
120 |   pub fn sse_response<S, E>(stream: S) -> RanvierResponse
    |                                           --------------- expected `Response<BoxBody<bytes::Bytes, Infallible>>` because of return type
...
128 | /     Response::builder()
129 | |         .status(StatusCode::OK)
130 | |         .header(CONTENT_TYPE, HeaderValue::from_static("text/event-stream"))
131 | |         .header(CACHE_CONTROL, HeaderValue::from_static("no-cache"))
132 | |         .body(boxed_body)
133 | |         .unwrap()
    | |_________________^ expected `Response<BoxBody<Bytes, Infallible>>`, found `Response<BoxBody<Bytes, Box<...>>>`
    |
    = note: expected struct `Response<BoxBody<_, Infallible>>`
               found struct `Response<BoxBody<_, Box<dyn StdError + std::marker::Send + Sync>>>`

warning: unused import: `futures_util::StreamExt`
   --> http\src\extract.rs:406:5
    |
406 | use futures_util::StreamExt;
    |     ^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `req`
   --> http\src\ingress.rs:805:55
    |
805 |         let handler: RouteHandler<R> = Arc::new(move |req: Request<Incoming>, res: &R| {
    |                                                       ^^^ help: if this is intentional, prefix it with an underscore: `_req`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `route_bus_injectors`
    --> http\src\ingress.rs:1550:17
     |
1550 |             let route_bus_injectors = route_bus_injectors.clone();
     |                 ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_route_bus_injectors`

error[E0308]: mismatched types
   --> http\src\sse.rs:128:5
    |
120 |   pub fn sse_response<S, E>(stream: S) -> RanvierResponse
    |                                           --------------- expected `Response<BoxBody<bytes::Bytes, std::convert::Infallible>>` because of return type
...
128 | /     Response::builder()
129 | |         .status(StatusCode::OK)
130 | |         .header(CONTENT_TYPE, HeaderValue::from_static("text/event-stream"))
131 | |         .header(CACHE_CONTROL, HeaderValue::from_static("no-cache"))
132 | |         .body(boxed_body)
133 | |         .unwrap()
    | |_________________^ expected `Response<BoxBody<Bytes, Infallible>>`, found `Response<BoxBody<Bytes, Box<...>>>`
    |
    = note: expected struct `Response<BoxBody<_, std::convert::Infallible>>`
               found struct `Response<BoxBody<_, Box<dyn StdError + std::marker::Send + Sync>>>`

Some errors have detailed explanations: E0277, E0308, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `ranvier-http` (lib) generated 20 warnings
error: could not compile `ranvier-http` (lib) due to 4 previous errors; 20 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `ranvier-http` (lib test) generated 20 warnings (20 duplicates)
error: could not compile `ranvier-http` (lib test) due to 4 previous errors; 20 warnings emitted
